smartanthill_zc/Xml/XmlParser.py
# Generated from java-escape by ANTLR 4.5
# encoding: utf-8
from __future__ import print_function
from antlr4 import *
from io import StringIO
package = globals().get("__package__", None)
ischild = len(package)>0 if package is not None else False
if ischild:
    from .XmlParserListener import XmlParserListener
    from .XmlParserVisitor import XmlParserVisitor
else:
    from XmlParserListener import XmlParserListener
    from XmlParserVisitor import XmlParserVisitor


class XmlParser ( Parser ):

    grammarFileName = "java-escape"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ u"<INVALID>", u"<INVALID>", u"<INVALID>", u"'<'", u"'</'", 
                     u"'<?xml'", u"'>'", u"'/>'", u"'?>'" ]

    symbolicNames = [ u"<INVALID>", u"CharData", u"Comment", u"LT", u"LT_SLASH", 
                      u"XML_DECL", u"GT", u"SLASH_GT", u"QUESTION_GT", u"Eq", 
                      u"S", u"AttValue", u"Name" ]

    RULE_document = 0
    RULE_prolog = 1
    RULE_xmlDecl = 2
    RULE_element = 3
    RULE_emptyElemTag = 4
    RULE_sTag = 5
    RULE_attribute = 6
    RULE_eTag = 7
    RULE_content = 8

    ruleNames =  [ u"document", u"prolog", u"xmlDecl", u"element", u"emptyElemTag", 
                   u"sTag", u"attribute", u"eTag", u"content" ]

    EOF = Token.EOF
    CharData=1
    Comment=2
    LT=3
    LT_SLASH=4
    XML_DECL=5
    GT=6
    SLASH_GT=7
    QUESTION_GT=8
    Eq=9
    S=10
    AttValue=11
    Name=12

    def __init__(self, input):
        super(XmlParser, self).__init__(input)
        self.checkVersion("4.5")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class DocumentContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(XmlParser.DocumentContext, self).__init__(parent, invokingState)
            self.parser = parser

        def element(self):
            return self.getTypedRuleContext(XmlParser.ElementContext,0)


        def EOF(self):
            return self.getToken(XmlParser.EOF, 0)

        def prolog(self):
            return self.getTypedRuleContext(XmlParser.PrologContext,0)


        def getRuleIndex(self):
            return XmlParser.RULE_document

        def enterRule(self, listener):
            if isinstance( listener, XmlParserListener ):
                listener.enterDocument(self)

        def exitRule(self, listener):
            if isinstance( listener, XmlParserListener ):
                listener.exitDocument(self)

        def accept(self, visitor):
            if isinstance( visitor, XmlParserVisitor ):
                return visitor.visitDocument(self)
            else:
                return visitor.visitChildren(self)




    def document(self):

        localctx = XmlParser.DocumentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_document)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 19
            _la = self._input.LA(1)
            if _la==XmlParser.XML_DECL:
                self.state = 18
                self.prolog()


            self.state = 21
            self.element()
            self.state = 22
            self.match(XmlParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PrologContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(XmlParser.PrologContext, self).__init__(parent, invokingState)
            self.parser = parser

        def xmlDecl(self):
            return self.getTypedRuleContext(XmlParser.XmlDeclContext,0)


        def getRuleIndex(self):
            return XmlParser.RULE_prolog

        def enterRule(self, listener):
            if isinstance( listener, XmlParserListener ):
                listener.enterProlog(self)

        def exitRule(self, listener):
            if isinstance( listener, XmlParserListener ):
                listener.exitProlog(self)

        def accept(self, visitor):
            if isinstance( visitor, XmlParserVisitor ):
                return visitor.visitProlog(self)
            else:
                return visitor.visitChildren(self)




    def prolog(self):

        localctx = XmlParser.PrologContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_prolog)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 24
            self.xmlDecl()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class XmlDeclContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(XmlParser.XmlDeclContext, self).__init__(parent, invokingState)
            self.parser = parser

        def S(self, i=None):
            if i is None:
                return self.getTokens(XmlParser.S)
            else:
                return self.getToken(XmlParser.S, i)

        def attribute(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(XmlParser.AttributeContext)
            else:
                return self.getTypedRuleContext(XmlParser.AttributeContext,i)


        def getRuleIndex(self):
            return XmlParser.RULE_xmlDecl

        def enterRule(self, listener):
            if isinstance( listener, XmlParserListener ):
                listener.enterXmlDecl(self)

        def exitRule(self, listener):
            if isinstance( listener, XmlParserListener ):
                listener.exitXmlDecl(self)

        def accept(self, visitor):
            if isinstance( visitor, XmlParserVisitor ):
                return visitor.visitXmlDecl(self)
            else:
                return visitor.visitChildren(self)




    def xmlDecl(self):

        localctx = XmlParser.XmlDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_xmlDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 26
            self.match(XmlParser.XML_DECL)
            self.state = 31
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,1,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 27
                    self.match(XmlParser.S)
                    self.state = 28
                    self.attribute() 
                self.state = 33
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

            self.state = 35
            _la = self._input.LA(1)
            if _la==XmlParser.S:
                self.state = 34
                self.match(XmlParser.S)


            self.state = 37
            self.match(XmlParser.QUESTION_GT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ElementContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(XmlParser.ElementContext, self).__init__(parent, invokingState)
            self.parser = parser

        def emptyElemTag(self):
            return self.getTypedRuleContext(XmlParser.EmptyElemTagContext,0)


        def sTag(self):
            return self.getTypedRuleContext(XmlParser.STagContext,0)


        def content(self):
            return self.getTypedRuleContext(XmlParser.ContentContext,0)


        def eTag(self):
            return self.getTypedRuleContext(XmlParser.ETagContext,0)


        def getRuleIndex(self):
            return XmlParser.RULE_element

        def enterRule(self, listener):
            if isinstance( listener, XmlParserListener ):
                listener.enterElement(self)

        def exitRule(self, listener):
            if isinstance( listener, XmlParserListener ):
                listener.exitElement(self)

        def accept(self, visitor):
            if isinstance( visitor, XmlParserVisitor ):
                return visitor.visitElement(self)
            else:
                return visitor.visitChildren(self)




    def element(self):

        localctx = XmlParser.ElementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_element)
        try:
            self.state = 44
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 39
                self.emptyElemTag()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 40
                self.sTag()
                self.state = 41
                self.content()
                self.state = 42
                self.eTag()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class EmptyElemTagContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(XmlParser.EmptyElemTagContext, self).__init__(parent, invokingState)
            self.parser = parser

        def Name(self):
            return self.getToken(XmlParser.Name, 0)

        def S(self, i=None):
            if i is None:
                return self.getTokens(XmlParser.S)
            else:
                return self.getToken(XmlParser.S, i)

        def attribute(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(XmlParser.AttributeContext)
            else:
                return self.getTypedRuleContext(XmlParser.AttributeContext,i)


        def getRuleIndex(self):
            return XmlParser.RULE_emptyElemTag

        def enterRule(self, listener):
            if isinstance( listener, XmlParserListener ):
                listener.enterEmptyElemTag(self)

        def exitRule(self, listener):
            if isinstance( listener, XmlParserListener ):
                listener.exitEmptyElemTag(self)

        def accept(self, visitor):
            if isinstance( visitor, XmlParserVisitor ):
                return visitor.visitEmptyElemTag(self)
            else:
                return visitor.visitChildren(self)




    def emptyElemTag(self):

        localctx = XmlParser.EmptyElemTagContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_emptyElemTag)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 46
            self.match(XmlParser.LT)
            self.state = 47
            self.match(XmlParser.Name)
            self.state = 52
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 48
                    self.match(XmlParser.S)
                    self.state = 49
                    self.attribute() 
                self.state = 54
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

            self.state = 56
            _la = self._input.LA(1)
            if _la==XmlParser.S:
                self.state = 55
                self.match(XmlParser.S)


            self.state = 58
            self.match(XmlParser.SLASH_GT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class STagContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(XmlParser.STagContext, self).__init__(parent, invokingState)
            self.parser = parser

        def Name(self):
            return self.getToken(XmlParser.Name, 0)

        def S(self, i=None):
            if i is None:
                return self.getTokens(XmlParser.S)
            else:
                return self.getToken(XmlParser.S, i)

        def attribute(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(XmlParser.AttributeContext)
            else:
                return self.getTypedRuleContext(XmlParser.AttributeContext,i)


        def getRuleIndex(self):
            return XmlParser.RULE_sTag

        def enterRule(self, listener):
            if isinstance( listener, XmlParserListener ):
                listener.enterSTag(self)

        def exitRule(self, listener):
            if isinstance( listener, XmlParserListener ):
                listener.exitSTag(self)

        def accept(self, visitor):
            if isinstance( visitor, XmlParserVisitor ):
                return visitor.visitSTag(self)
            else:
                return visitor.visitChildren(self)




    def sTag(self):

        localctx = XmlParser.STagContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_sTag)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 60
            self.match(XmlParser.LT)
            self.state = 61
            self.match(XmlParser.Name)
            self.state = 66
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 62
                    self.match(XmlParser.S)
                    self.state = 63
                    self.attribute() 
                self.state = 68
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

            self.state = 70
            _la = self._input.LA(1)
            if _la==XmlParser.S:
                self.state = 69
                self.match(XmlParser.S)


            self.state = 72
            self.match(XmlParser.GT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AttributeContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(XmlParser.AttributeContext, self).__init__(parent, invokingState)
            self.parser = parser

        def Name(self):
            return self.getToken(XmlParser.Name, 0)

        def Eq(self):
            return self.getToken(XmlParser.Eq, 0)

        def AttValue(self):
            return self.getToken(XmlParser.AttValue, 0)

        def getRuleIndex(self):
            return XmlParser.RULE_attribute

        def enterRule(self, listener):
            if isinstance( listener, XmlParserListener ):
                listener.enterAttribute(self)

        def exitRule(self, listener):
            if isinstance( listener, XmlParserListener ):
                listener.exitAttribute(self)

        def accept(self, visitor):
            if isinstance( visitor, XmlParserVisitor ):
                return visitor.visitAttribute(self)
            else:
                return visitor.visitChildren(self)




    def attribute(self):

        localctx = XmlParser.AttributeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_attribute)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self.match(XmlParser.Name)
            self.state = 75
            self.match(XmlParser.Eq)
            self.state = 76
            self.match(XmlParser.AttValue)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ETagContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(XmlParser.ETagContext, self).__init__(parent, invokingState)
            self.parser = parser

        def Name(self):
            return self.getToken(XmlParser.Name, 0)

        def S(self, i=None):
            if i is None:
                return self.getTokens(XmlParser.S)
            else:
                return self.getToken(XmlParser.S, i)

        def getRuleIndex(self):
            return XmlParser.RULE_eTag

        def enterRule(self, listener):
            if isinstance( listener, XmlParserListener ):
                listener.enterETag(self)

        def exitRule(self, listener):
            if isinstance( listener, XmlParserListener ):
                listener.exitETag(self)

        def accept(self, visitor):
            if isinstance( visitor, XmlParserVisitor ):
                return visitor.visitETag(self)
            else:
                return visitor.visitChildren(self)




    def eTag(self):

        localctx = XmlParser.ETagContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_eTag)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            _la = self._input.LA(1)
            if _la==XmlParser.S:
                self.state = 78
                self.match(XmlParser.S)


            self.state = 81
            self.match(XmlParser.LT_SLASH)
            self.state = 82
            self.match(XmlParser.Name)
            self.state = 84
            _la = self._input.LA(1)
            if _la==XmlParser.S:
                self.state = 83
                self.match(XmlParser.S)


            self.state = 86
            self.match(XmlParser.GT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ContentContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(XmlParser.ContentContext, self).__init__(parent, invokingState)
            self.parser = parser

        def element(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(XmlParser.ElementContext)
            else:
                return self.getTypedRuleContext(XmlParser.ElementContext,i)


        def getRuleIndex(self):
            return XmlParser.RULE_content

        def enterRule(self, listener):
            if isinstance( listener, XmlParserListener ):
                listener.enterContent(self)

        def exitRule(self, listener):
            if isinstance( listener, XmlParserListener ):
                listener.exitContent(self)

        def accept(self, visitor):
            if isinstance( visitor, XmlParserVisitor ):
                return visitor.visitContent(self)
            else:
                return visitor.visitChildren(self)




    def content(self):

        localctx = XmlParser.ContentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_content)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==XmlParser.LT:
                self.state = 88
                self.element()
                self.state = 93
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx




